# aixtract-py

./: .gitignore  README.md  aixtract.rb  pyproject.toml
aixtract/: __init__.py  cli.py
